[package]
name = "yarner-fold-code"
version = "0.2.0"
authors = ["Martin Lange <martin_lange_@gmx.net>"]
edition = "2018"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
regex = "1.4"
once_cell = "1.5"
yarner-lib = { git = "https://github.com/mlange-42/yarner.git", tag = "0.5.1" }
