[package]
name = "yarner-fold-code"
version = "0.2.1"
authors = ["Martin Lange <martin_lange_@gmx.net>"]
readme = "README.md"
description = "A Yarner plugin that puts all code blocks into collapsed `<details>` tags"
homepage = "https://github.com/mlange-42/yarner-fold-code/"
repository = "https://github.com/mlange-42/yarner-fold-code/"
license = "MIT"
edition = "2018"
exclude = [".github"]

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
regex = "1.4"
once_cell = "1.5"
yarner-lib = "0.5.2"
